--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <article class="box box5">5</article>
       <article class="box box6">6</article>
     </section>
+    <section class="sample">
+
+    </section>
 
   </body>
 </html>
